Cleaned up layout-base class and fixed footer spacing

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -42,32 +42,13 @@
   --font-sans: "Poppins", sans-serif;
   --text-xxs: 0.6875rem; /* 10pt */
   /* --root-bg: var(--color-base-200); */
-  --padding: 2rem;
+  /* --padding: 2rem; */
+  --padding: calc(var(--spacing) * 8);
 }
 
+/* Layout classes */
 @utility layout-base {
-  --max-width: 120ch;
-  /* --padding: 36px; */
-
-  display: grid;
-  place-content: center;
-  grid-template-columns:
-    minmax(var(--padding), 1fr)
-    min(var(--max-width), 100% - var(--padding) * 2)
-    minmax(var(--padding), 1fr);
-
-  & > * {
-    grid-column: 2/3;
-  }
-
-  & > .full-width {
-    grid-column: 1/-1;
-  }
-}
-
-@utility layout-80ch {
-  --max-width: 80ch;
-  /* --padding: 36px; */
+  --max-width: 70rem;
 
   display: grid;
   place-content: center;
@@ -86,7 +67,6 @@
 }
 
 /* Sensible defaults for list styling */
-
 ol {
   counter-reset: counter;
 }
